[gd_scene load_steps=23 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://align.gd" type="Script" id=2]
[ext_resource path="res://Pretzel Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://arrow_down.png" type="Texture" id=4]
[ext_resource path="res://arrow_restart.png" type="Texture" id=5]
[ext_resource path="res://text_logo_post.png" type="Texture" id=6]
[ext_resource path="res://camera.gd" type="Script" id=7]
[ext_resource path="res://poly.gd" type="Script" id=8]
[ext_resource path="res://pltform.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="CanvasItemShader" id=2]

_code = { "fragment":"uniform float outline_width=2.0;\nuniform color outline_color=vec4(0,0,0,1);\nuniform color modulate=color(0.2,0.4,1.0,0.8);\n\nvec4 col = tex(TEXTURE,UV);\nvec2 ps = TEXTURE_PIXEL_SIZE;\nfloat a;\nfloat maxa=col.a;\nfloat mina=col.a;\na=tex(TEXTURE,UV+vec2(0,-outline_width)*ps).a;\nmaxa=max(a,maxa); \nmina=min(a,mina);\na=tex(TEXTURE,UV+vec2(0,outline_width)*ps).a;\nmaxa=max(a,maxa); \nmina=min(a,mina);\na=tex(TEXTURE,UV+vec2(-outline_width,0)*ps).a;\nmaxa=max(a,maxa); \nmina=min(a,mina);\na=tex(TEXTURE,UV+vec2(outline_width,0)*ps).a;\nmaxa=max(a,maxa); \nmina=min(a,mina);\n\nvec4 xx = vec4(modulate.rgb,tex(TEXTURE,UV).a*modulate.a);\n\nCOLOR=mix(xx,outline_color,maxa-mina);\n\n\n", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=3]

shader/shader = SubResource( 2 )
shader/shading_mode = 0
shader_param/outline_width = 2.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/modulate = Color( 0.2, 0.4, 1, 0.8 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 100, -100, 100, 100, -100, 100, -100, -100 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 292.039, 1.57718, 5182.01, -1838.1, 5311.02, -1436.42, -730.263, 955.117 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 250.942, 11.3998, 292.039, 1.57718, -730.263, 955.117 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 212.391, 8.40723, 250.942, 11.3998, -730.263, 955.117 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 162.892, 0.343292, 212.391, 8.40723, -730.263, 955.117, -1082.68, -5.39334 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 99.1449, -19.6514, 162.892, 0.343292, -1082.68, -5.39334 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 21.442, -56.0769, 99.1449, -19.6514, -1082.68, -5.39334 )

[sub_resource type="ConvexPolygonShape2D" id=11]

custom_solver_bias = 0.0
points = Vector2Array( -64.8867, -133.48, 21.442, -56.0769, -1082.68, -5.39334 )

[sub_resource type="ConvexPolygonShape2D" id=12]

custom_solver_bias = 0.0
points = Vector2Array( -150.244, -238.552, -64.8867, -133.48, -1082.68, -5.39334 )

[sub_resource type="ConvexPolygonShape2D" id=13]

custom_solver_bias = 0.0
points = Vector2Array( -150.244, -238.552, -1082.68, -5.39334, -206.293, -324.216 )

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 2 )

[node name="txt" type="Label" parent="CanvasLayer"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 206.0
margin/top = 19.0
margin/right = 73.0
margin/bottom = 90.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.578125, 0.578125, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_as_outline = 1
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button_down" type="TextureButton" parent="CanvasLayer"]

material/material = SubResource( 3 )
anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 173.0
margin/top = 140.0
margin/right = 109.0
margin/bottom = 391.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )

[node name="Button_restart" type="TextureButton" parent="CanvasLayer"]

material/material = SubResource( 3 )
anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 174.0
margin/top = 233.0
margin/right = 105.0
margin/bottom = 298.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="ludogramming" type="TextureButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 843.0
margin/top = 554.0
margin/right = 1001.0
margin/bottom = 585.2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/scale = Vector2( 0.4, 0.4 )

[node name="Camera" type="Camera2D" parent="."]

transform/pos = Vector2( 280.621, -170.597 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 7 )

[node name="Ball" type="RigidBody2D" parent="."]

transform/pos = Vector2( 276.099, -164.363 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 1
mode = 1
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 0.0
damp_override/angular = 0.0
__meta__ = { "_edit_group_":true, "_edit_lock_":true }

[node name="poly" type="CollisionPolygon2D" parent="Ball"]

build_mode = 0
polygon = Vector2Array( 100, -100, 100, 100, -100, 100, -100, -100 )
shape_range = Vector2( 0, 0 )
trigger = false
script/script = ExtResource( 8 )

[node name="graph" type="Polygon2D" parent="Ball"]

polygon = Vector2Array(  )
uv = Vector2Array(  )
color = Color( 1, 0.971466, 0.667969, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="reference" type="Polygon2D" parent="Ball"]

visibility/visible = false
polygon = Vector2Array( -10, 10, -1, 0, -10, -10, 0, -60, 10, -10, 1, 0, 10, 10 )
uv = Vector2Array(  )
color = Color( 1, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Base" type="RigidBody2D" parent="."]

transform/pos = Vector2( 184.217, 597.734 )
transform/rot = -20.6677
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 7 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 8 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 9 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 10 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 11 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 12 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 13 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
collision/layers = 1
collision/mask = 1
mode = 1
mass = 10000.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 0.0
damp_override/angular = 0.0

[node name="Polygon2D2" type="CollisionPolygon2D" parent="Base"]

build_mode = 0
polygon = Vector2Array( -150.244, -238.552, -206.293, -324.216, -1082.68, -5.39334, -730.263, 955.117, 5311.02, -1436.42, 5182.01, -1838.1, 292.039, 1.57718, 250.942, 11.3998, 212.391, 8.40723, 162.892, 0.343292, 99.1449, -19.6514, 21.442, -56.0769, -64.8867, -133.48 )
shape_range = Vector2( 0, 8 )
trigger = false
script/script = ExtResource( 9 )

[node name="graph1" type="Polygon2D" parent="Base"]

polygon = Vector2Array(  )
uv = Vector2Array(  )
color = Color( 0.835922, 0.714846, 0.506134, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[connection signal="pressed" from="CanvasLayer/Button_down" to="." method="_on_Button_down_pressed"]

[connection signal="pressed" from="CanvasLayer/Button_restart" to="." method="_on_Button_restart_pressed"]

[connection signal="pressed" from="CanvasLayer/ludogramming" to="." method="_on_ludogramming_pressed"]


